rework on player selection and caht added back in

--- a/index.html
+++ b/index.html
@@ -31,16 +31,63 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-lg-10 login">
+            <div class="col-lg-12 title">
+                <h1>ROCK PAPER SCISSOR</h1>
+                <br>
+                <span id="status"></span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6 p1login">
+                <label id="player1Label" for="player1Name">Player1 Name: </label>
+                <input id="player1Name" type="text" value="Player1 Names" onfocus="this.value=''">
+                <input id="player1Submit" type="submit" value="Submit">
+            </div>
+            <div class="col-lg-6 p2login">
+                <label id="player1Label" for="player2Name">Player2 Name: </label>
+                <input id="player2Name" type="text" value="New Search" onfocus="this.value=''">
+                <input id="player2Submit" type="submit" value="Submit">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6 p1selected"></div>
+            <div class="col-lg-6 p2selected"></div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6">
+                <h1>Player1</h1>
+                <button class="p1sel" value="r" type="submit">Rock</button>
+                <button class="p1sel" value="p" type="submit">Paper</button>
+                <button class="p1sel" value="s" type="submit">Scissor</button>
+            </div>
+            <div class="col-lg-6">
+                <h1>Player2</h1>
+                <button class="p2sel" value="r" type="submit">Rock</button>
+                <button class="p2sel" value="p" type="submit">Paper</button>
+                <button class="p2sel" value="s" type="submit">Scissor</button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="container testing overflow-auto"></div>
+                <div class="form-group">
+                    <label for="comment">Comments</label>
+                    <textarea class="form-control" id="comment" rows="3"></textarea>
+                </div>
+                <button type="submit" id="submitCmt">Submit</button>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- <div class="col-lg-10 login">
                 <form class="form-inline">
                     <div class="form-group">
-                        <label for="username">Username:</label>
-                        <input type="text" class="form-control" id="username">
+                        <label id="playerEntry" for="username" class="col-lg-2">Player Name: </label>
+                        <div class="col-lg-6">
+                            <input type="text" class="form-control" id="username">
+                        </div>
                     </div>
-                    <!-- <div class="form-group">
-                        <label for="pwd">Password:</label>
-                        <input type="password" class="form-control" id="pwd">
-                    </div> -->
                     <button type="submit" id="submitBtn">Submit</button>
                 </form>
             </div>
@@ -60,9 +107,13 @@
             <div class="col-lg-6 playerOne"></div>
             <div class="col-lg-6 playerTwo">Players Connected to Chat<br></div>
         </div>
-    </div>
+        <div class="row">
+            <div class="col-lg-6 playerOne1">Player 1 guesses<br></div>
+            <div class="col-lg-6 playerTwo2">Player 2 guesses<br></div>
+        </div>
+    </div> -->
 
-    
+
 
     <script src="assets/javascript/app.js"></script>
 </body>
