--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <input type="image" src="assets/images/scissors.png" class="p1sel" value="s">
                 </div>
                 <br>
-                <div>
+                <div class="scores">
                     Wins: <span id="p1wins">0</span> Losses: <span id="p1losses">0</span>
                 </div>
             </div>
@@ -80,7 +80,7 @@
                     <input type="image" src="assets/images/scissors.png" class="p2sel" value="s">
                 </div>
                 <br>
-                <div>
+                <div class="scores">
                     Wins: <span id="p2wins">0</span> Losses: <span id="p2losses">0</span>
                 </div>
             </div>
