--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Boot strap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet">
     <!-- My Styling -->
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -53,8 +53,8 @@
                 <h1 id="p1Name">Player1</h1>
                 <br>
                 <div id="p1buttons">
-                    <input type="image" src="assets/images/rock.png" class="p1sel" value="r">
-                    <input type="image" src="assets/images/paper.png" class="p1sel" value="p">
+                    <input type="image" src="assets/images/rock.png"     class="p1sel" value="r">
+                    <input type="image" src="assets/images/paper.png"    class="p1sel" value="p">
                     <input type="image" src="assets/images/scissors.png" class="p1sel" value="s">
                 </div>
                 <br>
@@ -75,8 +75,8 @@
                 <h1 id="p2Name">Player2</h1>
                 <br>
                 <div id="p2buttons">
-                    <input type="image" src="assets/images/rock.png" class="p2sel" value="r">
-                    <input type="image" src="assets/images/paper.png" class="p2sel" value="p">
+                    <input type="image" src="assets/images/rock.png"     class="p2sel" value="r">
+                    <input type="image" src="assets/images/paper.png"    class="p2sel" value="p">
                     <input type="image" src="assets/images/scissors.png" class="p2sel" value="s">
                 </div>
                 <br>
@@ -85,7 +85,7 @@
                 </div>
             </div>
         </div>
-        <br><br><br>
+        <br><br>
         <div class="row cSection">
             <div class="col-lg-12">
                 <div class="container commentSection overflow-auto"></div>
